[gd_scene load_steps=8 format=3 uid="uid://1keluihgvhi"]

[ext_resource type="Script" path="res://Screens/UI/prompt_box.gd" id="1_q02rt"]
[ext_resource type="FontFile" uid="uid://ys3st85dei1t" path="res://assets/fonts/cloak.ttf" id="1_y7ybg"]
[ext_resource type="SpriteFrames" uid="uid://crshhkg1tjly6" path="res://Thoughts/MinorThought/thought_object_Animation2D.tres" id="2_2nddq"]

[sub_resource type="LabelSettings" id="LabelSettings_tvfq1"]
font = ExtResource("1_y7ybg")
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_d4lox"]
resource_name = "prompt_box_ui_cloud_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudContainer/Cloud_1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1.31951, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudContainer/Cloud_2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(0.840897, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudContainer/Cloud_3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CloudContainer/Cloud_1:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1.23114, 1),
"update": 0,
"values": [0, 12]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CloudContainer/Cloud_2:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(0.784584, 1),
"update": 0,
"values": [0, 12]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CloudContainer/Cloud_3:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 12]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CloudContainer/Cloud_4:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CloudContainer/Cloud_4:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 12]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CloudContainer/Cloud_5:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1.18921, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CloudContainer/Cloud_5:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(0.732043, 1),
"update": 0,
"values": [0, 12]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CloudContainer/Cloud_6:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.615572, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CloudContainer/Cloud_6:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 12]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("CloudContainer/Cloud_7:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("CloudContainer/Cloud_7:frame")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.18921, 1),
"update": 0,
"values": [0, 12]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("CloudContainer/Cloud_8:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1.36604, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 2)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("CloudContainer/Cloud_8:frame")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(0.68302, 1),
"update": 0,
"values": [0, 12]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("CloudContainer/Cloud_1:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("CloudContainer/Cloud_2:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("CloudContainer/Cloud_3:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/19/type = "value"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("CloudContainer/Cloud_4:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/20/type = "value"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("CloudContainer/Cloud_5:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/21/type = "value"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("CloudContainer/Cloud_6:visible")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/22/type = "value"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("CloudContainer/Cloud_7:visible")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/23/type = "value"
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/path = NodePath("CloudContainer/Cloud_8:visible")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/24/type = "value"
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/path = NodePath("Label:visible")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/25/type = "value"
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/path = NodePath("Label:modulate")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dttd2"]
resource_name = "prompt_box_ui_text_transition"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 0.8, 2.3, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1.1, 1.1), Vector2(1, 1), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.45, 0.5, 0.55, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.174533, 0.174533, -0.174533, 0.174533, -0.174533, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"cycle_text"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.8, 2.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hbtw8"]
_data = {
"prompt_box_ui_cloud_animation": SubResource("Animation_d4lox"),
"prompt_box_ui_text_transition": SubResource("Animation_dttd2")
}

[node name="PromptBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q02rt")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 75.0
offset_top = 7.0
offset_right = -70.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(87, 30)
text = "There's a red stapler here, minding its own business."
label_settings = SubResource("LabelSettings_tvfq1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hbtw8")
}

[node name="text_cycle_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="restart_timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="CloudContainer" type="Node2D" parent="."]
position = Vector2(162, 40)

[node name="Cloud_1" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(-24, -3)
rotation = -0.211185
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_2" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(19, 5)
rotation = -3.31787
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_3" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(57, -3)
rotation = 0.141372
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_4" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(15, -16)
rotation = 0.235619
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_5" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(86, 1)
rotation = -0.493928
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_6" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(-58, 0)
rotation = 0.424115
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_7" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(-39, -25)
rotation = -0.218166
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[node name="Cloud_8" type="AnimatedSprite2D" parent="CloudContainer"]
visible = false
position = Vector2(60, -21)
rotation = 0.211185
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_2nddq")
animation = &"pop_loop"
frame = 12

[connection signal="timeout" from="text_cycle_timer" to="." method="_on_text_cycle_timer_timeout"]
[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]
